2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amoverview.pl.in: Fix parsing of time field from amadmin.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amidxtaped.c, restore-src/restore.c,
	  server-src/amcheck.c, server-src/amflush.c,
	  server-src/amlabel.c, server-src/taper.c,
	  server-src/taperscan.c: Check for CNF_TAPEDEV == NULL.

2006-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Don't set CNF_TAPEDEV to DEFAULT_TAPE_DEVICE.
	* configure.in: Don't set DEFAULT_TAPE_DEVICE.

2006-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Add logging on error.

2006-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amoverview.pl.in: Use shellwords instead of quotewords,
	  don't add date for disk not in the disklist.

2006-09-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Fix %hd printf argument format.
	* common-src/security-util.c: Fix %hd printf argument format.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1p1 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1p1).
	* NEWS: Update for 2.5.1p1

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Improve debugging.
	* server-src/changer.c: Make sure to dup the fd out of the 0..2 range.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amfetchdump.c: Pass new prompt_in parameter to
				     search_tapes.
	* restore-src/restore.c (search_tapes, load_manual_tape): New prompt_in
								  parameter.
	* restore-src/restore.h (search_tapes): New prompt_in parameter.
	* restore-src/amidxtaped.c: Set new 'FILE *' instead of reusing stdin
				    and stdout.
	* server-src/amindexd.c: Set new 'FILE *' instead of reusing stdin
				 and stdout.

2006-09-27  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski <orion@cora.nwra.com>